# abt-t2t

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  build.sh
apps/: CMakeLists.txt  exchange_sim.cpp
cmake/: CompilerWarnings.cmake
config/: exchange_sim.toml
docs/: measurement-methodology.md
include/abt/dut/: BookBuilder.hpp  DutSession.hpp  Strategy.hpp  T2tRecorder.hpp  TakeStrategy.hpp  TxStamp.hpp
include/abt/lob/: OrderBook.hpp  Types.hpp
include/abt/net/: LoopbackIo.hpp  SocketIo.hpp
include/abt/protocol/: Checksum.hpp  Endian.hpp  EthIpUdp.hpp  Itch50.hpp  MoldUdp64.hpp  Ouch50.hpp  SoupBinTcp.hpp  UdpFramer.hpp
include/abt/sim/: EngineConfig.hpp  ExchangeSession.hpp  FlowGenerator.hpp  SimConfig.hpp  Venue.hpp
include/abt/util/: Clock.hpp  DivBy.hpp  FlatHashMap.hpp  Scan.hpp  Tsc.hpp
src/dut/: BookBuilder.cpp  T2tRecorder.cpp
src/protocol/: MoldUdp64.cpp  UdpFramer.cpp
src/sim/: ConfigLoad.cpp
test/: CMakeLists.txt  TestHarness.hpp  config_test.cpp  divby_test.cpp  dpdk_test.cpp  dut_socket_test.cpp  dutbook_test.cpp  dutproc_test.cpp  dutsession_test.cpp  flathashmap_test.cpp  framing_test.cpp  gen_test.cpp  itch_test.cpp  lob_test.cpp  net_test.cpp  ouch_test.cpp  scan_test.cpp  session_test.cpp  socketio_test.cpp  t2t_test.cpp  venue_test.cpp
